// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout reducer should handle LAYOUT_CHANGE_ACTIVE 1`] = `
Object {
  "activeMenu": "Monitor",
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_CHANGE_LOCATION 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentLocation": "yaml",
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_CHANGE_ORG 1`] = `
Object {
  "activeMenu": "initialActive",
  "currentOrganization": "org1",
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_COLLAPSE 1`] = `
Object {
  "activeMenu": "initialActive",
  "isCollapsed": true,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_EXPAND 1`] = `
Object {
  "activeMenu": "initialActive",
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_HIDE_LOADING 1`] = `
Object {
  "activeMenu": "initialActive",
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_INITIALIZE 1`] = `
Object {
  "activeMenu": "some-menu",
  "currentLocation": "some location",
  "currentOrganization": "some organization",
  "isCollapsed": true,
  "isLoading": false,
  "items": "some-items",
}
`;

exports[`Layout reducer should handle LAYOUT_SHOW_LOADING 1`] = `
Object {
  "activeMenu": "initialActive",
  "isCollapsed": false,
  "isLoading": true,
  "items": Array [],
}
`;

exports[`Layout reducer should return the initial state 1`] = `
Object {
  "activeMenu": "initialActive",
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;
